kernel/target/thumbv8m.main-none-eabi/debug/build/littlefs2-sys-fd7590767809b097/out/bindings.rs

/* automatically generated by rust-bindgen 0.70.1 */

pub const LFS_VERSION: u32 = 131081;
pub const LFS_VERSION_MAJOR: u32 = 2;
pub const LFS_VERSION_MINOR: u32 = 9;
pub const LFS_DISK_VERSION: u32 = 131073;
pub const LFS_DISK_VERSION_MAJOR: u32 = 2;
pub const LFS_DISK_VERSION_MINOR: u32 = 1;
pub const LFS_NAME_MAX: u32 = 255;
pub const LFS_FILE_MAX: u32 = 2147483647;
pub const LFS_ATTR_MAX: u32 = 1022;
#[doc = " Definitions ///"]
pub type lfs_size_t = u32;
pub type lfs_off_t = u32;
pub type lfs_ssize_t = i32;
pub type lfs_soff_t = i32;
pub type lfs_block_t = u32;
pub const lfs_error_LFS_ERR_OK: lfs_error = 0;
pub const lfs_error_LFS_ERR_IO: lfs_error = -5;
pub const lfs_error_LFS_ERR_CORRUPT: lfs_error = -84;
pub const lfs_error_LFS_ERR_NOENT: lfs_error = -2;
pub const lfs_error_LFS_ERR_EXIST: lfs_error = -17;
pub const lfs_error_LFS_ERR_NOTDIR: lfs_error = -20;
pub const lfs_error_LFS_ERR_ISDIR: lfs_error = -21;
pub const lfs_error_LFS_ERR_NOTEMPTY: lfs_error = -39;
pub const lfs_error_LFS_ERR_BADF: lfs_error = -9;
pub const lfs_error_LFS_ERR_FBIG: lfs_error = -27;
pub const lfs_error_LFS_ERR_INVAL: lfs_error = -22;
pub const lfs_error_LFS_ERR_NOSPC: lfs_error = -28;
pub const lfs_error_LFS_ERR_NOMEM: lfs_error = -12;
pub const lfs_error_LFS_ERR_NOATTR: lfs_error = -61;
pub const lfs_error_LFS_ERR_NAMETOOLONG: lfs_error = -36;
pub type lfs_error = ::core::ffi::c_int;
pub const lfs_type_LFS_TYPE_REG: lfs_type = 1;
pub const lfs_type_LFS_TYPE_DIR: lfs_type = 2;
pub const lfs_type_LFS_TYPE_SPLICE: lfs_type = 1024;
pub const lfs_type_LFS_TYPE_NAME: lfs_type = 0;
pub const lfs_type_LFS_TYPE_STRUCT: lfs_type = 512;
pub const lfs_type_LFS_TYPE_USERATTR: lfs_type = 768;
pub const lfs_type_LFS_TYPE_FROM: lfs_type = 256;
pub const lfs_type_LFS_TYPE_TAIL: lfs_type = 1536;
pub const lfs_type_LFS_TYPE_GLOBALS: lfs_type = 1792;
pub const lfs_type_LFS_TYPE_CRC: lfs_type = 1280;
pub const lfs_type_LFS_TYPE_CREATE: lfs_type = 1025;
pub const lfs_type_LFS_TYPE_DELETE: lfs_type = 1279;
pub const lfs_type_LFS_TYPE_SUPERBLOCK: lfs_type = 255;
pub const lfs_type_LFS_TYPE_DIRSTRUCT: lfs_type = 512;
pub const lfs_type_LFS_TYPE_CTZSTRUCT: lfs_type = 514;
pub const lfs_type_LFS_TYPE_INLINESTRUCT: lfs_type = 513;
pub const lfs_type_LFS_TYPE_SOFTTAIL: lfs_type = 1536;
pub const lfs_type_LFS_TYPE_HARDTAIL: lfs_type = 1537;
pub const lfs_type_LFS_TYPE_MOVESTATE: lfs_type = 2047;
pub const lfs_type_LFS_TYPE_CCRC: lfs_type = 1280;
pub const lfs_type_LFS_TYPE_FCRC: lfs_type = 1535;
pub const lfs_type_LFS_FROM_NOOP: lfs_type = 0;
pub const lfs_type_LFS_FROM_MOVE: lfs_type = 257;
pub const lfs_type_LFS_FROM_USERATTRS: lfs_type = 258;
pub type lfs_type = ::core::ffi::c_uint;
pub const lfs_open_flags_LFS_O_RDONLY: lfs_open_flags = 1;
pub const lfs_open_flags_LFS_O_WRONLY: lfs_open_flags = 2;
pub const lfs_open_flags_LFS_O_RDWR: lfs_open_flags = 3;
pub const lfs_open_flags_LFS_O_CREAT: lfs_open_flags = 256;
pub const lfs_open_flags_LFS_O_EXCL: lfs_open_flags = 512;
pub const lfs_open_flags_LFS_O_TRUNC: lfs_open_flags = 1024;
pub const lfs_open_flags_LFS_O_APPEND: lfs_open_flags = 2048;
pub const lfs_open_flags_LFS_F_DIRTY: lfs_open_flags = 65536;
pub const lfs_open_flags_LFS_F_WRITING: lfs_open_flags = 131072;
pub const lfs_open_flags_LFS_F_READING: lfs_open_flags = 262144;
pub const lfs_open_flags_LFS_F_ERRED: lfs_open_flags = 524288;
pub const lfs_open_flags_LFS_F_INLINE: lfs_open_flags = 1048576;
pub type lfs_open_flags = ::core::ffi::c_uint;
pub const lfs_whence_flags_LFS_SEEK_SET: lfs_whence_flags = 0;
pub const lfs_whence_flags_LFS_SEEK_CUR: lfs_whence_flags = 1;
pub const lfs_whence_flags_LFS_SEEK_END: lfs_whence_flags = 2;
pub type lfs_whence_flags = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lfs_config {
    pub context: *mut ::core::ffi::c_void,
    pub read: ::core::option::Option<
        unsafe extern "C" fn(
            c: *const lfs_config,
            block: lfs_block_t,
            off: lfs_off_t,
            buffer: *mut ::core::ffi::c_void,
            size: lfs_size_t,
        ) -> ::core::ffi::c_int,
    >,
    pub prog: ::core::option::Option<
        unsafe extern "C" fn(
            c: *const lfs_config,
            block: lfs_block_t,
            off: lfs_off_t,
            buffer: *const ::core::ffi::c_void,
            size: lfs_size_t,
        ) -> ::core::ffi::c_int,
    >,
    pub erase: ::core::option::Option<
        unsafe extern "C" fn(c: *const lfs_config, block: lfs_block_t) -> ::core::ffi::c_int,
    >,
    pub sync:
        ::core::option::Option<unsafe extern "C" fn(c: *const lfs_config) -> ::core::ffi::c_int>,
    pub read_size: lfs_size_t,
    pub prog_size: lfs_size_t,
    pub block_size: lfs_size_t,
    pub block_count: lfs_size_t,
    pub block_cycles: i32,
    pub cache_size: lfs_size_t,
    pub lookahead_size: lfs_size_t,
    pub compact_thresh: lfs_size_t,
    pub read_buffer: *mut ::core::ffi::c_void,
    pub prog_buffer: *mut ::core::ffi::c_void,
    pub lookahead_buffer: *mut ::core::ffi::c_void,
    pub name_max: lfs_size_t,
    pub file_max: lfs_size_t,
    pub attr_max: lfs_size_t,
    pub metadata_max: lfs_size_t,
    pub inline_max: lfs_size_t,
    pub disk_version: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lfs_config"][::core::mem::size_of::<lfs_config>() - 88usize];
    ["Alignment of lfs_config"][::core::mem::align_of::<lfs_config>() - 4usize];
    ["Offset of field: lfs_config::context"][::core::mem::offset_of!(lfs_config, context) - 0usize];
    ["Offset of field: lfs_config::read"][::core::mem::offset_of!(lfs_config, read) - 4usize];
    ["Offset of field: lfs_config::prog"][::core::mem::offset_of!(lfs_config, prog) - 8usize];
    ["Offset of field: lfs_config::erase"][::core::mem::offset_of!(lfs_config, erase) - 12usize];
    ["Offset of field: lfs_config::sync"][::core::mem::offset_of!(lfs_config, sync) - 16usize];
    ["Offset of field: lfs_config::read_size"]
        [::core::mem::offset_of!(lfs_config, read_size) - 20usize];
    ["Offset of field: lfs_config::prog_size"]
        [::core::mem::offset_of!(lfs_config, prog_size) - 24usize];
    ["Offset of field: lfs_config::block_size"]
        [::core::mem::offset_of!(lfs_config, block_size) - 28usize];
    ["Offset of field: lfs_config::block_count"]
        [::core::mem::offset_of!(lfs_config, block_count) - 32usize];
    ["Offset of field: lfs_config::block_cycles"]
        [::core::mem::offset_of!(lfs_config, block_cycles) - 36usize];
    ["Offset of field: lfs_config::cache_size"]
        [::core::mem::offset_of!(lfs_config, cache_size) - 40usize];
    ["Offset of field: lfs_config::lookahead_size"]
        [::core::mem::offset_of!(lfs_config, lookahead_size) - 44usize];
    ["Offset of field: lfs_config::compact_thresh"]
        [::core::mem::offset_of!(lfs_config, compact_thresh) - 48usize];
    ["Offset of field: lfs_config::read_buffer"]
        [::core::mem::offset_of!(lfs_config, read_buffer) - 52usize];
    ["Offset of field: lfs_config::prog_buffer"]
        [::core::mem::offset_of!(lfs_config, prog_buffer) - 56usize];
    ["Offset of field: lfs_config::lookahead_buffer"]
        [::core::mem::offset_of!(lfs_config, lookahead_buffer) - 60usize];
    ["Offset of field: lfs_config::name_max"]
        [::core::mem::offset_of!(lfs_config, name_max) - 64usize];
    ["Offset of field: lfs_config::file_max"]
        [::core::mem::offset_of!(lfs_config, file_max) - 68usize];
    ["Offset of field: lfs_config::attr_max"]
        [::core::mem::offset_of!(lfs_config, attr_max) - 72usize];
    ["Offset of field: lfs_config::metadata_max"]
        [::core::mem::offset_of!(lfs_config, metadata_max) - 76usize];
    ["Offset of field: lfs_config::inline_max"]
        [::core::mem::offset_of!(lfs_config, inline_max) - 80usize];
    ["Offset of field: lfs_config::disk_version"]
        [::core::mem::offset_of!(lfs_config, disk_version) - 84usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lfs_info {
    pub type_: u8,
    pub size: lfs_size_t,
    pub name: [::core::ffi::c_char; 256usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lfs_info"][::core::mem::size_of::<lfs_info>() - 264usize];
    ["Alignment of lfs_info"][::core::mem::align_of::<lfs_info>() - 4usize];
    ["Offset of field: lfs_info::type_"][::core::mem::offset_of!(lfs_info, type_) - 0usize];
    ["Offset of field: lfs_info::size"][::core::mem::offset_of!(lfs_info, size) - 4usize];
    ["Offset of field: lfs_info::name"][::core::mem::offset_of!(lfs_info, name) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lfs_fsinfo {
    pub disk_version: u32,
    pub block_size: lfs_size_t,
    pub block_count: lfs_size_t,
    pub name_max: lfs_size_t,
    pub file_max: lfs_size_t,
    pub attr_max: lfs_size_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lfs_fsinfo"][::core::mem::size_of::<lfs_fsinfo>() - 24usize];
    ["Alignment of lfs_fsinfo"][::core::mem::align_of::<lfs_fsinfo>() - 4usize];
    ["Offset of field: lfs_fsinfo::disk_version"]
        [::core::mem::offset_of!(lfs_fsinfo, disk_version) - 0usize];
    ["Offset of field: lfs_fsinfo::block_size"]
        [::core::mem::offset_of!(lfs_fsinfo, block_size) - 4usize];
    ["Offset of field: lfs_fsinfo::block_count"]
        [::core::mem::offset_of!(lfs_fsinfo, block_count) - 8usize];
    ["Offset of field: lfs_fsinfo::name_max"]
        [::core::mem::offset_of!(lfs_fsinfo, name_max) - 12usize];
    ["Offset of field: lfs_fsinfo::file_max"]
        [::core::mem::offset_of!(lfs_fsinfo, file_max) - 16usize];
    ["Offset of field: lfs_fsinfo::attr_max"]
        [::core::mem::offset_of!(lfs_fsinfo, attr_max) - 20usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lfs_attr {
    pub type_: u8,
    pub buffer: *mut ::core::ffi::c_void,
    pub size: lfs_size_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lfs_attr"][::core::mem::size_of::<lfs_attr>() - 12usize];
    ["Alignment of lfs_attr"][::core::mem::align_of::<lfs_attr>() - 4usize];
    ["Offset of field: lfs_attr::type_"][::core::mem::offset_of!(lfs_attr, type_) - 0usize];
    ["Offset of field: lfs_attr::buffer"][::core::mem::offset_of!(lfs_attr, buffer) - 4usize];
    ["Offset of field: lfs_attr::size"][::core::mem::offset_of!(lfs_attr, size) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lfs_file_config {
    pub buffer: *mut ::core::ffi::c_void,
    pub attrs: *mut lfs_attr,
    pub attr_count: lfs_size_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lfs_file_config"][::core::mem::size_of::<lfs_file_config>() - 12usize];
    ["Alignment of lfs_file_config"][::core::mem::align_of::<lfs_file_config>() - 4usize];
    ["Offset of field: lfs_file_config::buffer"]
        [::core::mem::offset_of!(lfs_file_config, buffer) - 0usize];
    ["Offset of field: lfs_file_config::attrs"]
        [::core::mem::offset_of!(lfs_file_config, attrs) - 4usize];
    ["Offset of field: lfs_file_config::attr_count"]
        [::core::mem::offset_of!(lfs_file_config, attr_count) - 8usize];
};
#[doc = " internal littlefs data structures ///"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lfs_cache {
    pub block: lfs_block_t,
    pub off: lfs_off_t,
    pub size: lfs_size_t,
    pub buffer: *mut u8,
}
